--- a/index.html
+++ b/index.html
@@ -7,39 +7,32 @@
 	<BODY>
 		<MAIN>
 			<SECTION id="card1">
-					<SECTION class="innersection">
+					<SECTION class="cardHolder">
             <img src="img/card1Active@2x.png" width="302px">
 					</SECTION>
 			</SECTION>
 			<SECTION id="card2">
-					<SECTION class="innersection">
+					<SECTION class="cardHolder center">
             <img src="img/card2@2x.png" width="302px">
 					</SECTION>
 			</SECTION>
 			<SECTION id="card3">
-					<SECTION class="innersection">
+					<SECTION class="cardHolder">
             <img src="img/card3@2x.png" width="302px">
           </SECTION>
 			</SECTION>
-      <SECTION id="card5">
-          <SECTION class="innersection">
 
-          </SECTION>
-      </SECTION>
 			<SECTION id="card4">
-					<SECTION class="innersection">
+					<SECTION class="cardHolder">
             <img src="img/card4@2x.png" width="302px">
 					</SECTION>
 			</SECTION>
 			<SECTION id="card5">
-					<SECTION class="innersection">
+					<SECTION class="cardHolder">
             <img src="img/card5@2x.png" width="302px">
 					</SECTION>
 			</SECTION>
-      <SECTION id="card5">
-          <SECTION class="innersection">
 
-          </SECTION>
       </SECTION>
 		</MAIN>
 
